<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HandLibrary</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="appname">掌上图书馆</string>
    <string name="studentId">学号</string>
    <string name="pass">密码</string>
    
    <string name="passrepeat">再次输入密码</string>
    <string name="agree">同意</string>
    <string name="protocol">注册协议</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="passforgot">忘记密码？</string>
    <string name="noaccount">没有账号？</string>
    <string name="tourist">游客登录</string>
    
    <string name="book">书籍</string>
    <string name="home">主页</string>
    <string name="my">我的</string>
    <string name="about">关于软件</string>
    
    <string name="category">目录</string>
    <string name="summary">概述</string>
    <string name="comment">评价</string>

</resources>
