<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mintcream"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/appname"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/et_loginid"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:drawableLeft="@drawable/id_small"
        android:drawablePadding="20dp"
        android:hint="@string/studentId"
        android:textSize="16sp" >
    </EditText>

    <EditText
        android:id="@+id/et_loginpass"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="20dp"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textSize="16sp" >
    </EditText>

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <TextView
                android:id="@+id/tv_passforgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passforgot"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bn_login"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_default"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_noaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noaccount"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <TextView
                android:id="@+id/tv_tourist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tourist"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>